--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ Pygments==2.11.2
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.5
-pywin32==302
+pywin32==227;platform_system == "Windows"
 pyzmq==23.2.0
 regex==2022.9.13
 requests==2.28.1
